try to fix product image overflow issue

--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -8,7 +8,7 @@
     padding: 0 2% 2% 2%;
     width: 100%;
     max-width: 30vw;
-    /* min-width: 100px; */
+    height: 550px;
     background-color: white;
     z-index: 1;
     border: 1px solid #e2e3e4;
@@ -28,8 +28,8 @@
 
 
 .product>.product_img>img {
-    width:auto;
-    height: 100%;
+    width:100%;
+    height: auto;
     display:block;
 }
 
@@ -100,6 +100,23 @@
     color:rgb(248, 209, 136);
 } 
 
+@media (max-width: 600px) {
+    .product {
+        max-width: 40vw;
+    }
+    .product>.product_img {
+            height: 50%;
+    }
+        
+    .product_info {
+            height: 30%;
+    }
+        
+    .product_info>.product_title {
+        height: 60%;
+    }
+}
+
 @media (max-width: 390px) {
     .product {
         max-width: 80vw;
@@ -112,5 +129,9 @@
     }
     .product_info>.product_title{
         height: 60%;
+    }
+    .product >.product_img >img {
+        width: 100%;
+        height: 100%;
     }
 }       
